Simple landing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello world
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Hello world</title>
+  </head>
+  <style>
+    @font-face {
+      font-family: capsuula;
+      src: url(http://pacebl.github.io/font/Capsuula.ttf);
+    }
+
+    body {
+      background-color: #EFEFEF;
+    }
+
+    h1 {
+      font-weight: normal;
+      font-family: capsuula;
+      font-size: 48pt;
+    }
+
+    #content {
+      width: 800px;
+      background-color: #FFFFFF;
+      text-align: center;
+      margin: 5em auto;
+      padding: 1em;
+    }
+  </style>
+  <body>
+    <div id="content">
+      <h1>I've Moved</h1>
+      <p>My blog, STDOUT, has moved.
+      Please click <a href="http://pacebl.github.io">here</a> to proceed.
+    </div>
+  </body>
+</html>
