--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Hello world</title>
+    <title>My blog has moved</title>
   <style>
     @font-face {
       font-family: capsuula;
